# efficient-computing-in-julia-2

./: .brei_history  .editorconfig  020-getting-started.html  020-getting-started.md  030-julia-basics.html  030-julia-basics.md  040-dispatch-and-types.html  050-arrays-and-broadcasting.html  050-arrays-and-broadcasting.md  060-simulating-solar-system.html  060-simulating-solar-system.md  070-pkg.html  080-package-development.html  090-best-practices.html  090-best-practices.md  100-introduction-performance.html  110-performance-analysis.html  120-dos-and-donts.html  130-channels-and-do.html  130-channels-and-do.md  140-threads-async-and-tasks.html  140-threads-async-and-tasks.md  145-distributed.html  145-distributed.md  150-transducers.html  150-transducers.md  160-cool-libraries.html  170-gpu-programming.html  170-gpu-programming.md  404.html  CODE_OF_CONDUCT.html  LICENSE.html  Makefile  Manifest.toml  Project.toml  README.md  a01-collatz.html  a01-collatz.md  a02-julia-fractals.html  a02-julia-fractals.md  (+21 more)
.entangled/: filedb.json  tasks.json
episodes/: 020-getting-started.md  030-julia-basics.md  040-dispatch-and-types.md  060-simulating-solar-system.md  070-pkg.md  080-package-development.md  100-introduction-performance.md  110-performance-analysis.md  120-dos-and-donts.md  160-cool-libraries.md  170-gpu-programming.md
instructor/: 020-getting-started.html  030-julia-basics.html  040-dispatch-and-types.html  050-arrays-and-broadcasting.html  060-simulating-solar-system.html  070-pkg.html  080-package-development.html  090-best-practices.html  404.html  aio.html  (+21 more)
(+7 files in other folders)
