[project]
name = "efficient-computing-in-julia-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Johan Hidding",email = "j.hidding@esciencecenter.nl"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.3.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
